--- a/index.html
+++ b/index.html
@@ -21,26 +21,26 @@
     }
     .inputLabel{
       color:coral;
-      font-size: 20px;
+      font-size: 2rem;
       font-family: 'Courier New', Courier, monospace;
     }
 
     .container{
-      width: 650px;
-      height: 400px;
+      width: 65rem;
+      height: 40rem;
       background-image: url(./images/b.jpg);
       background-size: cover;
       background-repeat: no-repeat;
-      padding: 20px;
-      border-radius: 4px;
-      box-shadow: 0px 6px 58px 0px rgba(209,213,219,0.66);
+      padding: 2rem;
+      border-radius: 0.4rem;
+      box-shadow: 0rem 0.6rem 0.6rem 0rem rgba(209,213,219,0.66);
       display: flex;
       align-items: center;
     }
 
     h1 {
       text-align: center;
-      font-size: 24px;
+      font-size: 2.4rem;
     }
 
     .title{
@@ -50,7 +50,7 @@
     button {
       background-color: #000;
       color: #fff;
-      padding: 10px 20px;
+      padding: 1rem 2rem;
       border: none;
       cursor: pointer;
     }
@@ -62,36 +62,36 @@
     }
 
     li {
-      margin: 5px 0;
+      margin: 0.5rem 0;
     }
 
     .result {
-      width: 400px;
+      width: 40rem;
       margin: 0 auto;
     }
 
     .front-numbers {
       background-color: #ececec;
-      padding: 10px;
-      border-radius: 8px;
+      padding: 1rem;
+      border-radius: 0.8rem;
     }
 
     .last-numbers {
       background-color: #ececec;
-      padding: 10px;
-      border-radius: 8px;
+      padding: 1rem;
+      border-radius: 0.8rem;
     }
     .daletou{
-      width:90px;
+      width:90rem;
       background-color: #fff;
-      border-radius: 4px;
+      border-radius: 0.4rem;
       color:#999;
-      font-size: 18px;
+      font-size: 1.8rem;
     }
 
     .divDuoLa {
-      width: 100px;
-      height: 100px;
+      width: 10rem;
+      height: 10rem;
       background-color: red;
       position: absolute;
       top: 10%;
@@ -113,7 +113,7 @@
     }
   </style>
 </head>
-<body>
+<body style="font-size: 1rem;">
   <h1 class="topTitle">哆啦A梦大神 包你中奖！ (ps: 主打一个心诚则灵) <button class="daletou" onclick="generate()">求签</button></h1>
   <div class="container">
     <h1 class="title"></h1>
